<resources>
    // Display Strings
    <string name="app_name">Popular Movies</string>
    <string name="original_title">"Original Title:"</string>
    <string name="user_rating">"User Rating:"</string>
    <string name="release_date">"Release Date:"</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="reviewer">Author:</string>
    <string name="error_could_not_find_movie_in_db">Error:  Could not locate movie in database.</string>
    <string name="rating_formatter">"%1$.2f   (%2$d votes)"</string>
    <string name="favorite_toggle_button_description">Favorite Toggle Button</string>
    <string name="movie_poster_description">"%1$s movie poster</string>

    // Parameters for movie database api calls.
    <string name="language">en-US</string>
    <string name="portrait_poster_path" translatable="false">https://image.tmdb.org/t/p/w500%1$s</string>
    <string name="landscape_poster_path" translatable="false">https://image.tmdb.org/t/p/w780/{poster_path}</string>
    <string name="trailer_list_path" translatable="false">videos</string>
    <string name="review_list_path" translatable="false">reviews</string>
    <string name="base_url" translatable="false">https://api.themoviedb.org/3/movie</string>
    <string name="api_key" translatable="false">api_key</string>
    <string name="page" translatable="false">page</string>

    // youtube link
    <string name="youtube_link" translatable="false">https://www.youtube.com/watch?v=%1$s</string>"

    // Parameters for retrieving from the json returned by the movie database.
    <string name="poster_path" translatable="false">poster_path</string>
    <string name="backdrop_path" translatable="false">backdrop_path</string>
    <string name="language_param" translatable="false">language</string>

    // Preferences
    <string name="pref_header_general">General</string>
    <string name="movie_list_type">Movie List Type</string>
    <string-array name="pref_movie_list_type_titles">
        <item>Popular</item>
        <item>Top Rated</item>
        <item>Now Playing</item>
        <item>Upcoming</item>
        <item>@string/favorites</item>
    </string-array>
    <string-array name="pref_movie_list_type_values">
        <item>popular</item>
        <item>top_rated</item>
        <item>now_playing</item>
        <item>upcoming</item>
        <item>@string/favorites</item>
    </string-array>

    // Menu Names
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="favorites">Favorites</string>

</resources>
