<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@+id/popular"
            android:icon="@drawable/fire_icon"
            android:title="@string/popular"/>
        <item android:id="@+id/top_rated"
            android:icon="@drawable/satisfaction_icon"
            android:title="@string/top_rated" />
        <item android:id="@+id/upcoming"
            android:icon="@drawable/coming_soon_icon"
            android:title="@string/upcoming"/>
        <item android:id="@+id/now_playing"
            android:icon="@drawable/video_play_roll_icon"
            android:title="@string/now_playing"/>
        <item android:id="@+id/favorites"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/favorites" />
</menu>